tests/ui/associated-type-bounds/return-type-notation/path-type-param.stderr
warning: the feature `return_type_notation` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/path-type-param.rs:1:12
   |
LL | #![feature(return_type_notation)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: return type notation is not allowed for functions that have type parameters
  --> $DIR/path-type-param.rs:10:5
   |
LL |     fn method<T>() -> impl Sized;
   |               - type parameter declared here
...
LL |     <T as Foo>::method(..): Send,
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: return type notation is not allowed for functions that have type parameters
  --> $DIR/path-type-param.rs:17:5
   |
LL |     fn method<T>() -> impl Sized;
   |               - type parameter declared here
...
LL |     <T as Foo>::method(..): Send,
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

